@@ -181,7 +181,7 @@ namespace Mono.Cecil {
 
 			if (types [Constants.ModuleType] == null)
 				types.Add (new TypeDefinition (
-						Constants.ModuleType, string.Empty, (TypeAttributes) 0, m_mod));
+						Constants.ModuleType, string.Empty, (TypeAttributes) 0));
 
 			foreach (ITypeDefinition t in types)
 				orderedTypes.Add (t);
